cros: fix SearchResultPageView's page bounds

During refactoring works to remove the fullscreen launcher flags,
the wrong block was removed in SearchResultPageView::GetPageBoundsForState

This CL restores the correct block of code, and fixes the page bounds
bug.

Bug: 786213
Change-Id: Ib9c81ba41fbc1280fa4135ba3ddc5f705170bb7a
Reviewed-on: https://chromium-review.googlesource.com/780042
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Alex Newcomer <newcomer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517973}
Former-commit-id: 89c4d0bd82a12f4f0f99a0e3808451e45a384fc6